@@ -559,7 +559,27 @@ public class Utilities {
 	 * @return The decoded topic name retrieved from the request.
 	 */
 	public static String getTopicFromRequest(HttpServletRequest request) throws Exception {
-		String topic = request.getParameter(ServletUtil.PARAMETER_TOPIC);
+		String topic = null;
+		if (request.getMethod().equalsIgnoreCase("GET")) {
+			// parameters passed via the URL and URL encoded, so request.getParameter may
+			// not interpret non-ASCII characters properly.  This code attempts to work
+			// around that issue by manually decoding.  yes, this is ugly and it would be
+			// great if someone could eventually make it unnecessary.
+			String query = request.getQueryString();
+			if (!StringUtils.hasText(query)) {
+				return null;
+			}
+			String prefix = ServletUtil.PARAMETER_TOPIC + "=";
+			int pos = query.indexOf(prefix);
+			if (pos != -1 && (pos + prefix.length()) < query.length()) {
+				topic = query.substring(pos + prefix.length());
+				if (topic.indexOf("&") != -1) {
+					topic = topic.substring(0, topic.indexOf("&"));
+				}
+			}
+			return Utilities.decodeFromURL(topic);
+		}
+		topic = request.getParameter(ServletUtil.PARAMETER_TOPIC);
 		if (topic == null) {
 			topic = (String)request.getAttribute(ServletUtil.PARAMETER_TOPIC);
 		}
